--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,44 +1,43 @@
-$desktop-above: 1280px;
 $desktop: 1280px;
 
-$tablet-above: 1024px;
 $tablet: 1024px;
 
-$mobile-above: 768px;
 $mobile: 768px;
 
+$s-mobile: 480px;
+
 @mixin desktop-above {
-  @media (min-width: $desktop-above) {
+  @media (width > $desktop) {
     @content;
   }
 }
 
 @mixin desktop {
-  @media (max-width: $desktop) {
+  @media (width <= $desktop) {
     @content;
   }
 }
 
 @mixin tablet-above {
-  @media (min-width: $tablet-above) {
+  @media (width > $tablet) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media (max-width: $tablet) {
+  @media (width <= $tablet) {
     @content;
   }
 }
 
 @mixin mobile-above {
-  @media (min-width: $mobile-above) {
+  @media (width > $mobile) {
     @content;
   }
 }
 
 @mixin mobile {
-  @media (max-width: $mobile) {
+  @media (width <= $mobile) {
     @content;
   }
 }
@@ -51,8 +50,8 @@ $mobile: 768px;
   }
 
   @media (hover: none) {
-  &:active {
-    @content;
+    &:active {
+      @content;
     }
-  } 
+  }
 }
