--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -9,5 +9,6 @@
     text-align: center;
     background-color: var(--section-color);
     border-radius: var(--border-radius-large);
+    @include fluid-text(12, 8);
   }
 }
